attempting to get the correct header spacing using flex

--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -14,8 +14,9 @@ header {
 
     display:flex;
     flex-direction: row;
-    /* justify-content: flex-end; */
+    justify-content: flex-end;
     align-items: center;
+    align-content: space-between;
 }
 
 h2 {
